<resources>
    <string name="app_name">Ear Training</string>

    <string name="intervals_menu">INTERVALS</string>
    <string name="chords_menu">CHORDS</string>
    <string name="cadences_menu">CADENCES</string>
    <string name="chord_progressions_menu">CHORD PROGRESSIONS</string>
    <string name="high_scores_menu">HIGH SCORES</string>
    <string name="settings_menu">SETTINGS</string>

    <string name="score">Score:</string>
    <string name="high_scores">High Score:</string>

    <string name="perfect">Perfect</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="aug">Aug</string>
    <string name="unison">Unison</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="seventh">Seventh</string>
    <string name="octave">Octave</string>
    <string name="ninth">Ninth</string>
    <string name="tenth">Tenth</string>
    <string name="eleventh">Eleventh</string>
    <string name="twelfth">Twelfth</string>

    <string name="dom_7">Dom 7</string>
    <string name="dim_7">Dim 7</string>
    <string name="augChord">Aug</string>
    <string name="majmaj7">Major 7</string>
    <string name="minmin7">Minor 7</string>
    <string name="root_pos">Root Pos</string>
    <string name="_1st_inv">1st Inv</string>
    <string name="_2nd_inv">2nd Inv</string>
    <string name="_3rd_inv">3rd Inv</string>

    <string name="plagal">Plagal</string>
    <string name="imperfect">Imperfect</string>
    <string name="deceptive">Deceptive</string>

    <string name="tonic_chord">I - Tonic</string>
    <string name="subdominant_chord">IV - Subdominant</string>
    <string name="dominant_chord">V - Dominant</string>
    <string name="submediant_chord">VI - Submediant</string>
    <string name="cadential_chord">Cadential 6-4</string>

    <string name="score_value">0</string>

    <string name="select_interval">Select the interval you hear:</string>
    <string name="select_chord">Select the chord you hear:</string>
    <string name="select_cadence">Select the cadence you hear:</string>
    <string name="select_chord_progressions">Select the chords you hear:</string>

    <string name="playing_interval">Playing interval…</string>
    <string name="playing_chord">Playing chord…</string>
    <string name="playing_cadence">Playing tonic note and cadence…</string>
    <string name="playing_chord_progression">Playing chord progression…</string>
    <string name="playing_each_chord">Playing chord #%1d…</string>
    <string name="playing_first_chord">Playing chord #1 (tonic)…</string>

    <string name="identify_interval">Identify the interval…</string>
    <string name="identify_chord">Identify the chord…</string>
    <string name="identify_cadence">Identify the cadence…</string>
    <string name="identify_chord_in_progression">Identify chord #%1d…</string>
    <string name="identify_tonic_in_progression">Identify chord #1 (tonic)…</string>

    <string name="replaying">Replaying…</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect…</string>
    <string name="try_again">Try again!</string>

    <string name="HIGH_SCORES_KEY">high scores</string>
    <string name="INTERVALS_SCORE_KEY">ihs</string>
    <string name="CHORDS_SCORE_KEY">chhs</string>
    <string name="CADENCES_SCORE_KEY">cahs</string>
    <string name="PROGRESSIONS_SCORE_KEY">cphs</string>

    <string name="CONTROLS_KEY">controls</string>
    <string name="INTERVALS_SPEED_KEY">intervals_speed</string>
    <string name="CHORDS_SPEED_KEY">chords_speed</string>
    <string name="CADENCES_SPEED_KEY">cadences_speed</string>
    <string name="PROGRESSIONS_SPEED_KEY">progressions_speed</string>

    <string name="PREF_LEVEL">pref_level</string>
    <string name="PREF_PRESET">pref_preset</string>

    <string name="PREF_INTERVALS">pref_intervals</string>
    <string name="PREF_INTERVALS_ADVANCED">pref_interval_type</string>
    <string name="PREF_CHORDS">pref_chords</string>
    <string name="PREF_CHORDS_ADVANCED">pref_chord_type</string>
    <string name="PREF_CADENCES">pref_cadences</string>
    <string name="PREF_CHORD_PROGRESSIONS">pref_chord_progressions</string>
    <string name="PREF_PROGRESSION_TONALITY">pref_progression_tonality</string>
    <string name="PREF_SEQ_LENGTH">pref_seq_length</string>
    <string name="PREF_REPEAT">pref_repeat</string>
</resources>
