<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EEF1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joshuayuan.eartraining.activity.MainActivity">

    <com.joshuayuan.eartraining.presentation.MenuButton
        android:id="@+id/intervals"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:onClick="openIntervals"
        android:text="@string/intervals_menu"
        android:textColor="#ffffff" />

    <com.joshuayuan.eartraining.presentation.MenuButton
        android:id="@+id/chords"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/intervals"
        android:layout_marginBottom="10dp"
        android:onClick="openChords"
        android:text="@string/chords_menu"
        android:textColor="#ffffff" />

    <com.joshuayuan.eartraining.presentation.MenuButton
        android:id="@+id/cadences"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chords"
        android:layout_marginBottom="10dp"
        android:onClick="openCadences"
        android:text="@string/cadences_menu"
        android:textColor="#ffffff" />

    <com.joshuayuan.eartraining.presentation.MenuButton
        android:id="@+id/chordprogression"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cadences"
        android:layout_marginBottom="10dp"
        android:onClick="openChordProgressions"
        android:text="@string/chord_progressions_menu"
        android:textColor="#ffffff" />

    <com.joshuayuan.eartraining.presentation.MenuButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chordprogression"
        android:layout_marginBottom="10dp"
        android:onClick="openSettings"
        android:text="@string/settings_menu"
        android:textColor="#ffffff" />

</RelativeLayout>
