<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EEF1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joshuayuan.eartraining.activity.ChordsActivity">

    <com.joshuayuan.eartraining.presentation.InstructionTextView
        android:id="@+id/chInstructions"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:text="@string/playing_chord"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />



    <com.joshuayuan.eartraining.presentation.ReplayButton
        android:id="@+id/replay"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:layout_above="@+id/linearLayout4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:onClick="replayChord"
        android:text="@string/replay_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/chInstructions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout4">

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/major"
            android:id="@+id/major"
            android:onClick="cpart1Clicked"
            android:enabled="false"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/minor"
            android:id="@+id/minor"
            android:onClick="cpart1Clicked"
            android:enabled="false"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_alignStart="@+id/linearLayout4"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout4">

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/dom_7"
            android:id="@+id/dom7"
            android:onClick="cpart1Clicked"
            android:enabled="false"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/dim_7"
            android:id="@+id/dim7"
            android:onClick="cpart2Clicked"
            android:enabled="false"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/augChord"
            android:id="@+id/augChord"
            android:onClick="cpart2Clicked"
            android:enabled="false"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d1cbc4"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/line"
        android:layout_alignLeft="@+id/linearLayout5"
        android:layout_alignStart="@+id/linearLayout5"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout6">

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/root_pos"
            android:id="@+id/root"
            android:onClick="cpart2Clicked"
            android:enabled="false"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/_1st_inv"
            android:id="@+id/first"
            android:onClick="cpart2Clicked"
            android:enabled="false"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentLeft="@+id/linearLayout6"
        android:layout_alignParentStart="@+id/linearLayout6">

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/_2nd_inv"
            android:id="@+id/second"
            android:onClick="cpart2Clicked"
            android:enabled="false"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <com.joshuayuan.eartraining.presentation.AnswerButton
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:text="@string/_3rd_inv"
            android:id="@+id/third"
            android:onClick="cpart2Clicked"
            android:enabled="false"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout8"
        android:layout_above="@+id/linearLayout9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.joshuayuan.eartraining.presentation.InstructionTextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="Score:"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:gravity="right"/>

        <com.joshuayuan.eartraining.presentation.InstructionTextView
            android:id="@+id/chordProgressionScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/score_value"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <com.joshuayuan.eartraining.presentation.InstructionTextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="High Score:"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <com.joshuayuan.eartraining.presentation.InstructionTextView
            android:id="@+id/chordHighestProgressionScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/score_value"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:srcCompat="@drawable/music_notes"
        android:layout_above="@+id/linearLayout8"
        android:layout_below="@+id/linearLayout7" />


</RelativeLayout>
